--- a/src/components/MyPostsPage.css
+++ b/src/components/MyPostsPage.css
@@ -11,7 +11,7 @@
 .my-posts-page{
   max-width: 430px; 
   width: 100%;
-  margin: 50px auto;
+  margin: 80px auto;
   background-color: #f9f9f9;
   min-height: 100vh;
   box-shadow: 0 0 20px rgba(0,0,0,0.1); 
@@ -44,6 +44,7 @@
   }
   
   .accepted-users ul {
+    list-style: none;
     padding-left: 1rem;
     margin: 0;
   }
