--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -67,13 +67,16 @@
 
 .dashboard-cards {
   display: flex;
-  flex-direction: column; /* 💡 always stacks vertically */
+  flex-direction: column;
   gap: 20px;
   margin-top: 40px;
   height: 500px;
 }
 
 .card {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
   padding: 1rem;
   background-color: white;
   border-radius: 8px;
@@ -111,3 +114,10 @@
 .card-links {
   text-decoration: none;
 }
+
+
+.bubble-text{
+  text-align: center;
+  color:#5C02A1;
+}
+
