--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -46,3 +46,9 @@
   .logout-button:hover {
     color: #ff6b6b;
   }
+
+  .menu-links a.active {
+    color: #00bcd4;
+    font-weight: bold;
+    text-decoration: underline;
+  }
