--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -11,10 +11,11 @@
   .profile-page {
     max-width: 430px; 
     width: 100%;
-    margin: 100px auto;
+    margin: 75px auto;
     background-color: #f9f9f9;
     min-height: 100vh;
     box-shadow: 0 0 20px rgba(0,0,0,0.1); 
+    margin-bottom: 100px;
    
   }
   
