--- a/src/components/ChatPage.css
+++ b/src/components/ChatPage.css
@@ -1,7 +1,17 @@
+.chat-page{
+  max-width: 430px; 
+  width: 100%;
+  margin: 0 auto;
+  background-color: #e6e6e6;
+  min-height: 100vh;
+  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+}
+
 .chat-content {
     max-width: 600px;
     margin: auto;
     padding: 1rem;
+
   }
   
   .message-thread {
@@ -11,6 +21,7 @@
     overflow-y: auto;
     background: #f9f9f9;
     margin-bottom: 1rem;
+    
   }
   
   .message {
@@ -18,6 +29,7 @@
     margin: 0.5rem 0;
     border-radius: 8px;
     max-width: 70%;
+    
   }
   
   .sent {
@@ -117,4 +129,26 @@
   .chat-input button:hover {
     background-color: #341f97;
   }
+  .back-icon-container{
+    display:flex;
+    justify-content: start;
+    flex-direction: row;
+    text-align: center;
+    vertical-align: center;
+  }
   
+  .back-icon{
+
+    width: 20px;
+    height: 30px;
+  }
+
+  .back-icon-text{
+   margin: auto;
+   margin-top: 2px;
+   margin-left: 5px;
+  }
+
+  ul {
+    list-style: none;
+  }
