--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -2,8 +2,8 @@
 .dashboard {
   max-width: 430px; 
   width: 100%;
-  margin: 50px auto;
-  background-color: #f9f9f9;
+  margin: 0px auto;
+  background-color: #e6e6e6;
   min-height: 100vh;
   box-shadow: 0 0 20px rgba(0,0,0,0.1); 
 }
@@ -80,10 +80,11 @@
   padding: 1rem;
   background-color: white;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  box-shadow: 0 4px 8px rgba(0,0,0,0.7);
   flex: 1;
   min-width: 150px;
   transition: transform 0.2s ease;
+
 }
 
 .card h3 {
@@ -119,5 +120,16 @@
 .bubble-text{
   text-align: center;
   color:#5C02A1;
+  box-shadow: 11px 14px 8px -8px rgba(5,0,235,0.75);
 }
 
+.icon-message{
+  width: 75px;
+  height: 75px;
+  box-shadow: 11px 14px 8px -8px rgba(0, 0, 0, 0.75);
+}
+
+.icon-lfg {
+  box-shadow: 11px 14px 8px -8px rgba(0, 0, 0, 0.75);
+  width: 75px;
+}
