--- a/src/components/MyPostsPage.css
+++ b/src/components/MyPostsPage.css
@@ -11,10 +11,11 @@
 .my-posts-page{
   max-width: 430px; 
   width: 100%;
-  margin: 80px auto;
+  margin: 0px auto;
   background-color: #f9f9f9;
   min-height: 100vh;
-  box-shadow: 0 0 20px rgba(0,0,0,0.1); 
+  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  margin-bottom: 100px;
 }
 
 .content {
